<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

    <TextView
            android:id="@+id/txt_property"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/splash_appTitle"
            android:textAlignment="center"
            android:textColor="@color/gray14"
            android:textSize="@dimen/sp32"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/midGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

    <TextView
            android:id="@+id/txt_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/splash_subTitle"
            android:textAlignment="center"
            android:textColor="@color/gray14"
            android:textSize="@dimen/sp22"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/midGuideLine" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp30"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/splash_appDescription"
            android:textAlignment="center"
            android:textColor="@color/gray14"
            android:textSize="@dimen/sp14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_subTitle" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

    <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp56"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginEnd="@dimen/dp30"
            android:background="@drawable/btn_capsule_gray14"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/button_register_txt"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bottom_guideLine"
            android:onClick="navigateToRegistrationForm"/>

    <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp56"
            android:layout_marginStart="@dimen/dp30"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginEnd="@dimen/dp30"
            android:background="@drawable/btn_capsule_gray14_bordered"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btn_login_txt"
            android:textColor="@color/gray14"
            android:textSize="@dimen/sp16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            android:onClick="navigateToLoginFormActivity"/>

</androidx.constraintlayout.widget.ConstraintLayout>